--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ defaults:
 plugins:
   - jekyll-paginate
   - jekyll-feed
+  - jekyll-gist
+  - jekyll-coffeescript
+  - jekyll-assets
 
 # Custom variables
 version: "1.1.0"
