--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   #url: ""
 
 # Build settings
-baseurl: /blog # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: /blog/ # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
